Fixed menu tooltips

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 					<div id="mapOptionsPopup" class="mapHUDPopup cntComposition">
 						<label title="Show/Hide all icons listed below (except events). Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons...</label>
 						<div id="mapOptionsDisplay">
-							<label><img src="img/map/scope.png" alt="" /><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
-							<label><img src="img/map/waypoint_h.png" alt="" /><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
-							<label><img src="img/map/landmark.png" alt="" /><input id="opt_bol_displayPOIs" type="checkbox" /> POIs</label>
-							<label><img src="img/map/vista.png" alt="" /><input id="opt_bol_displayVistas" type="checkbox" /> Vistas</label>
-							<label><img src="img/map/skill.png" alt="" /><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
-							<label><img src="img/map/heart.png" alt="" /><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
+							<label><img data-src="img/map/scope.png" /><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
+							<label><img data-src="img/map/waypoint_h.png" /><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
+							<label><img data-src="img/map/landmark.png" /><input id="opt_bol_displayPOIs" type="checkbox" /> POIs</label>
+							<label><img data-src="img/map/vista.png" /><input id="opt_bol_displayVistas" type="checkbox" /> Vistas</label>
+							<label><img data-src="img/map/skill.png" /><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
+							<label><img data-src="img/map/heart.png" /><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
 						</div>
-						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again, and can become active by simply being near them."><img src="img/event/swords.png" alt="" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
+						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again, and can become active by simply being near them."><img data-src="img/event/swords.png" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
 						<div id="mapOptionsOther">
 							<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
