--- a/bin/embed_gw2timer.html
+++ b/bin/embed_gw2timer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>GW2Timer.com Embedding Examples</title>
@@ -17,6 +17,39 @@
 
 	<h2>Example 3</h2>
 	<iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<br />
+	<br />
+	
+	<h2>Example 4</h2>
+	<iframe src="http://gw2timer.com/?enu_Language=de&bol_use24Hour=true" width="720" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<br />
+	<br />
+	
+	<h2>Example 5</h2>
+	<iframe src="http://gw2timer.com/?mode=Simple" width="720" height="720" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<br />
+	<br />
+	
+	<h2>Example 6</h2>
+	<div style="
+		position: relative;
+		width: 360px;
+		height: 410px;
+		overflow: hidden;
+		border: 1px solid #444;
+		box-shadow: 0px 0px 12px #223;
+		">
+		<iframe
+			src="http://gw2timer.com/?page=Map&section=Daily&int_setClock=3"
+			width="360"
+			height="1080"
+			seamless="seamless"
+			style="
+				position: absolute;
+				top: -360px;
+				">
+		</iframe>
+	</div>
 	<br />
 	<br />
 
