--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div id="mapGPSPopup" class="mapHUDPopup cntComposition">
 						<label title="Automatically scroll the map to your in-game location."><input id="opt_bol_followCharacter" type="checkbox" />Follow Game Character</label>
 						<label title="Automatically move the map character pin to your in-game location."><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
-						<label title="Delay between when your character is pinpointed again. This should not be faster than the overlay's rate."><input id="opt_int_msecGPSRefresh" type="number" min="50" max="1000" step="10" /> GPS Rate (ms)</label>
+						<label title="Milliseconds before your character is pinpointed again. This should not be faster than the overlay's rate."><input id="opt_int_msecGPSRefresh" type="number" min="50" max="1000" step="10" /> GPS Rate (ms)</label>
 					</div>
 				</div>
 				<div id="mapOptions" class="mapHUDContainer">
@@ -445,6 +445,7 @@
 					<br />
 					<h2>Trading</h2>
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
+					<label title="Will use the backup provider if unchecked."><input id="opt_bol_useMainTPSearch" type="checkbox" /> Use main TP search provider</label>
 					<label title="How many seconds before the program refreshes price and exchange data?"><input id="opt_int_secTradingRefresh" type="number" min="10" max="600" step="1" /> Seconds between refreshes</label>
 					<label title="How many calculators to show? If you pick a number lower than the current, data from the higher numbered calculators will be erased! Reload page to see changes."><input id="opt_int_numTradingCalculators" type="number" min="1" max="250" step="1" /> Number of TP calculators</label>
 					<label title="How many items to show in the TP search result?"><input id="opt_int_numTradingResults" type="number" min="1" max="50" step="1" /> Number of TP search results</label>
