Update version number

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta name="description" content="Guild Wars 2 dragon timer for world boss meta events, with daily achievements checklists, JP nodes map, and Trading Post tracker overlay." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 	<meta name="msvalidate.01" content="95E5C0E89A8A24688EC00F2A69986A17" />
+	<link rel="alternate" hreflang="de" href="http://gw2timer.com/?enu_Language=de" />
+	<link rel="alternate" hreflang="es" href="http://gw2timer.com/?enu_Language=es" />
+	<link rel="alternate" hreflang="fr" href="http://gw2timer.com/?enu_Language=fr" />
 
 	<!-- Stylesheets -->
 	<link rel="shortcut icon" type="image/x-icon" href="img/ui/favicon.png" />
